--- a/src/app/Components/page/acount-settings/acount-settings.component.html
+++ b/src/app/Components/page/acount-settings/acount-settings.component.html
@@ -1,3 +1,57 @@
-<p>
-acount-settings works!
-</p>
+  <div class="fixed-plugin">
+    <div class="dropdown show-dropdown">
+      <a href="#" data-toggle="dropdown">
+        <i class="fa fa-cog fa-2x"> </i>
+      </a>
+      <ul class="dropdown-menu">
+        <li class="header-title"> Sidebar Filters</li>
+        <li class="adjustments-line">
+          <a href="javascript:void(0)" class="switch-trigger active-color">
+            <div class="badge-colors ml-auto mr-auto">
+              <span #color (click)="ChangeColor( 'purple' )" class="badge filter badge-purple active" data-color="purple"></span>
+              <span #color (click)="ChangeColor( 'azure' )" class="badge filter badge-azure" data-color="azure"></span>
+              <span #color (click)="ChangeColor( 'green' )" class="badge filter badge-green" data-color="green"></span>
+              <span #color (click)="ChangeColor( 'orange' )" class="badge filter badge-warning" data-color="orange"></span>
+              <span #color (click)="ChangeColor( 'danger' )" class="badge filter badge-danger" data-color="danger"></span>
+            </div>
+            <div class="clearfix"></div>
+          </a>
+        </li>
+
+        <li class="header-title">Images</li>
+        <li>
+          <a class="img-holder switch-trigger" href="javascript:void(0)">
+            <img src="https://www.lareserva.com/sites/default/files/styles/article_image/public/field/image/natf.jpeg" alt="">
+          </a>
+        </li>
+        <li class="active">
+          <a class="img-holder switch-trigger" href="javascript:void(0)">
+            <img src="https://image.freepik.com/foto-gratis/sostener-plantula-fondo-verde-sol-concepto-ecologico-dia-tierra_34152-1487.jpg" alt="">
+          </a>
+        </li>
+        <li>
+          <a class="img-holder switch-trigger" href="javascript:void(0)">
+            <img src="https://1u594u31nvw01cjgyx4gvsr15ge-wpengine.netdna-ssl.com/wp-content/blogs.dir/1/files/2014/11/Arctic-Fox-1.jpg" alt="">
+          </a>
+        </li>
+        <li>
+          <a class="img-holder switch-trigger" href="javascript:void(0)">
+            <img src="https://i1.wp.com/www.viajesyvacaciones.es/wp-content/uploads/2016/05/tianzi-china.jpg" alt="">
+          </a>
+        </li>
+
+        <!-- <li class="header-title">Want more components?</li>
+            <li class="button-container">
+                <a href="https://www.creative-tim.com/product/material-dashboard-pro" target="_blank" class="btn btn-warning btn-block">
+                  Get the pro version
+                </a>
+            </li> -->
+        <li class="button-container">
+          <a href="https://demos.creative-tim.com/material-dashboard-dark/docs/2.0/getting-started/introduction.html" target="_blank" class="btn btn-default btn-block">
+            View Documentation
+          </a>
+        </li>
+
+      </ul>
+    </div>
+  </div>
