--- a/src/app/Components/page/home/home.component.html
+++ b/src/app/Components/page/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="White-edition">
 	<div class="wrapper">
-		<app-sidebar></app-sidebar>
+		<app-sidebar  [color1]="col" ></app-sidebar>
 		<div class="main-panel">
 			<app-navbar>  
       </app-navbar> 
@@ -12,3 +12,4 @@
 		</div>
 	</div>
 </div>
+<app-acount-settings  (S_color)= " col= $event"  ></app-acount-settings>
