--- a/src/app/Components/shared/sidebar/sidebar.component.html
+++ b/src/app/Components/shared/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar"  [attr.data-color]='color1'  data-background-color="black" [attr.data-image]='url'>
+<div class="sidebar" [attr.data-color]='color1' data-background-color="black" [attr.data-image]='url'>
 	<!--
         Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
@@ -28,7 +28,6 @@
 				</div>
 			</li>
 
-
 			<li class="nav-item" [routerLinkActive]="['active']">
 				<a class="nav-link" [routerLink]="['perfil']">
 					<i class="material-icons">face</i>
@@ -37,74 +36,58 @@
 			</li>
 
 			<!-- http://ashishkhan.com/blog/buddy-whatsapp-chat-bot-with-python -->
-			<a data-toggle="collapse" type="button" aria-expanded="false" class="dropdown-item btn-block "
-				[routerLinkActive]="['active']" href="#homeSubmenu">
-				<i class="material-icons">confirmation_number</i>
-
-				Tickets</a>
-
-			<div class="collapse" id="homeSubmenu">
-
-				<li class="dropdown-item" [routerLinkActive]="['active']">
-					<a class="nav-link">
-						<i class="material-icons">assignment</i>
-						Registro</a>
-				</li>
-
-				<li class="dropdown-item" [routerLinkActive]="['active']">
-					<a class="nav-link">
-						<i class="material-icons">visibility</i>
-						Visualizacion</a>
-				</li>
-			</div>
-
-
-
-			<li class="nav-item ">
-				<a class="nav-link">
-					<i class="material-icons">directions_walk</i>
-					<p>Rutas</p>
+			<li class="nav-item">
+				<a class="nav-link collapsed" data-toggle="collapse" href="#TicktsSub">
+					<i class="material-icons">confirmation_number</i>
+					<p>Tickets</p>
+					<b class="caret"></b>
 				</a>
-				<ul class="nav">
-					<li class="nav-item ">
-						<a class="nav-link">
-							<i class="fa fa-mobile" aria-hidden="true"></i>
-							<p>Modelos Equipos</p>
-						</a>
-					</li>
-				</ul>
+				<div class="collapse" id="TicktsSub">
+					<ul class="nav">
+						<li class="nav-item" [routerLinkActive]="['active']">
+							<a class="nav-link">
+								<i class="material-icons">assignment</i>
+								Registro</a>
+						</li>
+
+						<li class="nav-item" [routerLinkActive]="['active']">
+							<a class="nav-link">
+								<i class="material-icons">visibility</i>
+								Visualizacion</a>
+						</li>
+					</ul>
+				</div>
+
 			</li>
 
 
-          <li class="nav-item ">
-            <a class="nav-link collapsed" data-toggle="collapse" href="#pagesExamples" aria-expanded="false">
-            <i class="material-icons">library_books</i>
-            <p>BaseConocimiento</p>
-             <b class="caret"></b>
-        </a>
-      <div class="collapse" id="pagesExamples" style="">
-        <ul class="nav">
-          <li class="nav-item ">
-              <a class="nav-link">
-					      	<i class="material-icons">email</i>
-                    Pricing 
-              </a>
-          </li>
-        </ul>
-			</div>
+			<li class="nav-item ">
 
+				<a class="nav-link collapsed" data-toggle="collapse" href="#pagesExamples">
+					<i class="material-icons">library_books</i>
+					<p>BaseConocimiento</p>
+					<b class="caret"></b>
+				</a>
 
+				<div class="collapse" id="pagesExamples">
+					<ul class="nav">
 
-			<!-- <a data-toggle="collapse" type="button" aria-expanded="false" class="dropdown-item btn-block "
-				href="#homeSubmenu1"> -->
+						<li class="nav-item " [routerLinkActive]="['active ']">
+							<a class="nav-link">
+								<i class="material-icons">library_books</i>
+								Xsales
+							</a>
+						</li>
 
-			<!-- <div class="collapse" id="homeSubmenu1">
-
-				<li class="dropdown-item">
-					<a class="nav-link">
-						<i class="material-icons">library_books</i>
-						Pronaca</a>
-				</li> -->
+						<li class="nav-item" [routerLinkActive]="['active ']">
+							<a class="nav-link">
+								<i class="material-icons">library_books</i>
+								Pronaca
+							</a>
+						</li>
+					</ul>
+				</div>
+			</li>
 
 		</ul>
 	</div>
