--- a/src/app/Components/shared/sidebar/sidebar.component.html
+++ b/src/app/Components/shared/sidebar/sidebar.component.html
@@ -1,11 +1,5 @@
+
 <div class="sidebar" [attr.data-color]='color1' data-background-color="black" [attr.data-image]='url'>
-	<!--
-        Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
-
-        Tip 2: you can also add an image using data-image tag
-
-        appangular-aa2e4
-    -->
 	<div class="logo">
 		<a routerLink="/home" class="simple-text logo-normal">Tickets/Sys</a>
 	</div>
@@ -45,7 +39,7 @@
 				<div class="collapse" id="TicktsSub">
 					<ul class="nav">
 						<li class="nav-item" [routerLinkActive]="['active']">
-							<a class="nav-link">
+							<a class="nav-link"  [routerLink]="['TRegistro']">
 								<i class="material-icons">assignment</i>
 								Registro</a>
 						</li>
