--- a/src/app/Components/page/acount-settings/acount-settings.component.html
+++ b/src/app/Components/page/acount-settings/acount-settings.component.html
@@ -57,9 +57,9 @@
 			</li>
 
 			<li class="button-container">
-				<a href="#" target="_blank" class="btn btn-default btn-block">
+				<button (click)="cargarArchivo( )"  class="btn btn-default btn-block">
 					CargarTicket
-				</a>
+				</button>
 			</li>
 
 		</ul>
