--- a/src/app/Components/shared/sidebar/sidebar.component.html
+++ b/src/app/Components/shared/sidebar/sidebar.component.html
@@ -45,7 +45,7 @@
 						</li>
 
 						<li class="nav-item" [routerLinkActive]="['active']">
-							<a class="nav-link">
+							<a class="nav-link" [routerLink]="['VTRegistro']" >
 								<i class="material-icons">visibility</i>
 								Visualizacion</a>
 						</li>
