--- a/src/app/Components/page/home/home.component.html
+++ b/src/app/Components/page/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="White-edition">
+<!-- <div class="White-edition">
 	<div class="wrapper">
 		<app-sidebar  [color1]="col" ></app-sidebar>
 		<div class="main-panel">
@@ -12,4 +12,4 @@
 		</div>
 	</div>
 </div>
-<app-acount-settings (S_color)= " col= $event"  ></app-acount-settings>
+<app-acount-settings (S_color)= " col= $event"  ></app-acount-settings> -->
