--- a/src/app/Components/page/pages.component.html
+++ b/src/app/Components/page/pages.component.html
@@ -1,1 +1,17 @@
-p
+<div class="White-edition">
+	<div class="wrapper">
+		<!-- [color1]="col" -->
+		<app-sidebar></app-sidebar>
+		<div class="main-panel">
+			<app-navbar>
+			</app-navbar>
+			<div class="content">
+				<div class="container-fluid">
+					<router-outlet></router-outlet>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- (S_color)= " col= $event"  -->
+<app-acount-settings></app-acount-settings>
