--- a/src/app/Components/shared/navbar/navbar.component.html
+++ b/src/app/Components/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-transparent dark-edition  navbar-absolute fixed-top " id="navigation-example">
 	<div class="container-fluid">
 		<div class="navbar-wrapper">
-			<a class="navbar-brand">Dashboard</a>
+			<a class="navbar-brand" >Dashboard</a>
 		</div>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation" data-target="#navigation-example">
             <span class="sr-only">Toggle navigation</span>
@@ -22,7 +22,7 @@
       
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link">
+					<a class="nav-link" [routerLink]="['dashbord']">
 						<i class="material-icons">dashboard</i>
 						<p class="d-lg-none d-md-block">
 							Stats
