--- a/src/app/Components/page/acount-settings/acount-settings.component.html
+++ b/src/app/Components/page/acount-settings/acount-settings.component.html
@@ -8,7 +8,7 @@
 		<ul class="dropdown-menu">
 			<li class="header-title"> Sidebar Filters</li>
 			<li class="adjustments-line">
-				<a href="javascript:void(0)" class="switch-trigger active-color">
+				<a class="switch-trigger active-color">
 					<div class="badge-colors ml-auto mr-auto">
 						<span #color (click)="ChangeColor( 'purple' )" class="badge filter badge-purple active" data-color="purple"></span>
 						<span #color (click)="ChangeColor( 'azure' )" class="badge filter badge-azure" data-color="azure"></span>
